fixed minor typo

--- a/Superconductor_gradient_boosting.ipynb
+++ b/Superconductor_gradient_boosting.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,17 @@
     "#regular expressioni\n",
     "import re\n",
     "\n",
+    "\n",
     "#visualization\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.gridspec as gridspec\n",
     "import seaborn as sns\n",
     "plt.rcParams.update({'font.size': 20})\n",
+    "\n",
+    "\n",
+    "from xgboost import plot_tree\n",
+    "from numpy import loadtxt\n",
     "\n",
     "#machine learn algrothism \n",
     "from sklearn.preprocessing import StandardScaler \n",
@@ -74,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -149,10 +154,10 @@
      "output_type": "stream",
      "text": [
       "Time with Scikit-Learn API\n",
-      "4.35 s ± 207 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "4.62 s ± 27.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
       "\n",
       "Time without Scikit-Learn API\n",
-      "157 ms ± 11.2 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "160 ms ± 300 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -171,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## xgboost interface function\n",
+    "## XGBoost interface function\n",
     "\n",
     "Adapted from a [script on kaggle](https://www.kaggle.com/tanitter/grid-search-xgboost-with-scikit-learn),\n",
     "below is a custom functions which interface xgboost with sklearn's Pipeline, GridSearchCV,and RandomizedSearchCV without using the slow Scikit-Learn XGBRegressor API."
@@ -193,7 +198,6 @@
     "        self.params.update({'silent':'1'})\n",
     "        \n",
     "        #GridSearchCV and RandomizedSearchCV does not preserve feature name.\n",
-    "        #Cord harding them causes GridSearchCV to crash. \n",
     "        self.feature_names = feature_names\n",
     "    def set_feature_names(feature_names):\n",
     "        self.feature_names = feature_names\n",
@@ -246,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -256,10 +260,10 @@
      "output_type": "stream",
      "text": [
       "Time of custom made sci-kit learn API\n",
-      "490 ms ± 77.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "1.33 s ± 708 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
       "\n",
       "Time of a 4-fold cv calculation with scaling using custom made sci-kit learn API\n",
-      "1.01 s ± 80.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.04 s ± 451 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -294,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +641,7 @@
        "10                 wtd_range_atomic_mass        0.013  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +697,7 @@
        "[]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -726,10 +730,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21:49:17] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 890 extra nodes, 0 pruned nodes, max_depth=17\n",
+      "[21:49:17] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 930 extra nodes, 0 pruned nodes, max_depth=17\n",
+      "[21:49:18] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 958 extra nodes, 0 pruned nodes, max_depth=17\n",
+      "[21:49:18] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 1006 extra nodes, 0 pruned nodes, max_depth=17\n",
+      "[21:49:18] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 964 extra nodes, 0 pruned nodes, max_depth=17\n",
+      "[21:49:18] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 796 extra nodes, 0 pruned nodes, max_depth=17\n",
+      "[21:49:18] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 648 extra nodes, 0 pruned nodes, max_depth=17\n",
+      "[21:49:18] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 480 extra nodes, 0 pruned nodes, max_depth=17\n",
+      "[21:49:18] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 566 extra nodes, 0 pruned nodes, max_depth=17\n",
+      "[21:49:18] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 250 extra nodes, 0 pruned nodes, max_depth=17\n"
+     ]
+    }
+   ],
+   "source": [
+    "params = {'subsample': 1.0, 'n_estimators': 230, 'min_child_weight': 18, 'max_depth': 17, 'learning_rate': 0.4, 'colsample_bytree': 1.0}\n",
+    "dtrain = xgb.DMatrix(data=X_train, label=y_train,feature_names=None) \n",
+    "xg_reg = xgb.train(params=params, dtrain=dtrain, num_boost_round=10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "xgb.plot_tree(xg_reg,num_trees=0)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
